Closed
Bug 1828450
Opened 2 years ago
Closed 2 years ago
Assertion failure: VideoCaptureAvFoundation::mWatchManager called on "wrong" thread
Categories
(Core :: WebRTC: Audio/Video, defect, P2)
Core
WebRTC: Audio/Video
Tracking
()
RESOLVED
FIXED
114 Branch
| Tracking | Status | |
|---|---|---|
| firefox-esr102 | --- | unaffected |
| firefox112 | --- | unaffected |
| firefox113 | --- | disabled |
| firefox114 | --- | fixed |
People
(Reporter: pehrsons, Assigned: pehrsons)
References
(Regression)
Details
(Keywords: regression)
Attachments
(2 files)
This is a false-positive regression from bug 1817724 where VideoCaptureAvFoundations's WatchManager::Watch trips an assertion in debug builds since it's mOwningThread is a TaskQueue that was just created, therefore not returned by AbstractThread::GetCurrent() (i.e AbstractThread::IsCurrentThreadIn() returns false).
The assertion failure is harmless since the underlying thread is the same with or without the TaskQueue.
Comment 1•2 years ago
|
||
Set release status flags based on info from the regressing bug 1817724
status-firefox112:
--- → unaffected
status-firefox113:
--- → affected
status-firefox114:
--- → affected
status-firefox-esr102:
--- → unaffected
| Assignee | ||
Comment 2•2 years ago
|
||
| Assignee | ||
Comment 3•2 years ago
|
||
Updated•2 years ago
|
Attachment #9328852 -
Attachment description: Bug 1828450 - Revert D171962 - In VideoCaptureAvFoundation use MediaEvent to handle frames. r?webrtc-reviewers → Bug 1828450 - Revert 9aa28e73aaf8 - In VideoCaptureAvFoundation use MediaEvent to handle frames. r?webrtc-reviewers
Updated•2 years ago
|
Attachment #9328851 -
Attachment description: Bug 1828450 - Revert D171963 - Don't buffer frames in VideoCaptureAvFoundation. r?webrtc-reviewers → Bug 1828450 - Revert fe7300653e99 - Don't buffer frames in VideoCaptureAvFoundation. r?webrtc-reviewers
Pushed by pehrsons@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/622e050b21ce
Revert fe7300653e99 - Don't buffer frames in VideoCaptureAvFoundation. r=webrtc-reviewers,ng
https://hg.mozilla.org/integration/autoland/rev/d96be9abcacd
Revert 9aa28e73aaf8 - In VideoCaptureAvFoundation use MediaEvent to handle frames. r=webrtc-reviewers,ng
Comment 5•2 years ago
|
||
| bugherder | ||
https://hg.mozilla.org/mozilla-central/rev/622e050b21ce
https://hg.mozilla.org/mozilla-central/rev/d96be9abcacd
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 114 Branch
| Assignee | ||
Updated•2 years ago
|
You need to log in
before you can comment on or make changes to this bug.
Description
•