Bug 1828450 - Revert fe7300653e99 - Don't buffer frames in VideoCaptureAvFoundation. r=webrtc-reviewers,ng

Differential Revision: https://phabricator.services.mozilla.com/D175655