dom/media/systemservices/objc_video_capture/video_capture_avfoundation.mm
@@ -20,7 +20,6 @@
 #include "modules/video_capture/video_capture_defines.h"
 #include "mozilla/Assertions.h"
 #include "mozilla/Monitor.h"
-#include "mozilla/TaskQueue.h"
 #include "mozilla/UniquePtr.h"
 #include "rtc_base/time_utils.h"
 
@@ -82,14 +81,9 @@ AVCaptureDeviceFormat* _Nullable FindFormat(AVCaptureDevice* _Nonnull aDevice,
 
 namespace webrtc::videocapturemodule {
 VideoCaptureAvFoundation::VideoCaptureAvFoundation(AVCaptureDevice* _Nonnull aDevice)
-    : mCallbackThread(TaskQueue::Create(do_AddRef(GetCurrentSerialEventTarget()),
-                                        "VideoCaptureAvFoundation::mCallbackThread")),
-      mDevice(aDevice),
+    : mDevice(aDevice),
       mAdapter([[VideoCaptureAdapter alloc] init]),
-      mCapturer([[RTC_OBJC_TYPE(RTCCameraVideoCapturer) alloc] initWithDelegate:mAdapter]),
-      mWatchManager(this, mCallbackThread),
-      mNextFrameToProcess(nil, "VideoCaptureAvFoundation::mNextFrameToProcess") {
-  mWatchManager.Watch(mNextFrameToProcess, &VideoCaptureAvFoundation::ProcessNextFrame);
+      mCapturer([[RTC_OBJC_TYPE(RTCCameraVideoCapturer) alloc] initWithDelegate:mAdapter]) {
   const char* uniqueId = [[aDevice uniqueID] UTF8String];
   size_t len = strlen(uniqueId);
   _deviceUniqueId = new (std::nothrow) char[len + 1];
@@ -100,7 +94,6 @@ VideoCaptureAvFoundation::VideoCaptureAvFoundation(AVCaptureDevice* _Nonnull aDe
 
 VideoCaptureAvFoundation::~VideoCaptureAvFoundation() {
   // Must block until capture has fully stopped, including async operations.
-  mWatchManager.Shutdown();
   StopCapture();
 }
 
@@ -144,8 +137,8 @@ int32_t VideoCaptureAvFoundation::StartCapture(const VideoCaptureCapability& aCa
     }
   }
 
-  mFrameListener =
-      mAdapter->frameEvent.Connect(mCallbackThread, this, &VideoCaptureAvFoundation::OnFrame);
+  mFrameListener = mAdapter->frameEvent.Connect(GetCurrentSerialEventTarget(), this,
+                                                &VideoCaptureAvFoundation::OnFrame);
 
   {
     Monitor monitor("VideoCaptureAVFoundation::StartCapture");
@@ -252,47 +245,29 @@ int32_t VideoCaptureAvFoundation::CaptureSettings(VideoCaptureCapability& aSetti
 void VideoCaptureAvFoundation::OnFrame(__strong RTCVideoFrame* _Nonnull aFrame) {
   RTC_DCHECK_RUN_ON(&mChecker);
   if (MOZ_LIKELY(mTrackingId)) {
-    const int64_t timestamp_us = aFrame.timeStampNs / rtc::kNumNanosecsPerMicrosec;
-    mCaptureRecorder.Start(timestamp_us, "VideoCaptureAVFoundation"_ns, *mTrackingId, aFrame.width,
+    mCaptureRecorder.Start(0, "VideoCaptureAVFoundation"_ns, *mTrackingId, aFrame.width,
                            aFrame.height, mImageType.valueOr(CaptureStage::ImageType::Unknown));
+    if (mCapability && mCapability->videoType != webrtc::VideoType::kI420) {
+      mConversionRecorder.Start(0, "VideoCaptureAVFoundation"_ns, *mTrackingId, aFrame.width,
+                                aFrame.height);
+    }
   }
 
-  if (mNextFrameToProcess) {
-    // Skipping a frame -- make sure it still shows up in the profiler.
-    mCaptureRecorder.Record(mNextFrameToProcess.Ref().timeStampNs / rtc::kNumNanosecsPerMicrosec);
-  }
-
-  mNextFrameToProcess = aFrame;
-}
-
-void VideoCaptureAvFoundation::ProcessNextFrame() {
-  RTC_DCHECK_RUN_ON(&mChecker);
-  if (!mNextFrameToProcess) {
-    return;
-  }
-
-  RTCVideoFrame* frame = mNextFrameToProcess;
-  mNextFrameToProcess = nil;
-
-  const int64_t timestamp_us = frame.timeStampNs / rtc::kNumNanosecsPerMicrosec;
-  if (mTrackingId && mImageType && *mImageType != CaptureStage::ImageType::I420) {
-    mConversionRecorder.Start(timestamp_us, "VideoCaptureAVFoundation"_ns, *mTrackingId,
-                              frame.width, frame.height);
-  }
-  RTCI420Buffer* buffer = [frame.buffer toI420];
-  mConversionRecorder.Record(timestamp_us);
+  const int64_t timestamp_us = aFrame.timeStampNs / rtc::kNumNanosecsPerMicrosec;
+  RTCI420Buffer* buffer = [aFrame.buffer toI420];
+  mConversionRecorder.Record(0);
   // Accessing the (intended-to-be-private) native buffer directly is hacky but lets us skip two
   // copies
   rtc::scoped_refptr<webrtc::I420BufferInterface> nativeBuffer = buffer.nativeI420Buffer;
-  auto videoFrame = webrtc::VideoFrame::Builder()
-                        .set_video_frame_buffer(nativeBuffer)
-                        .set_rotation(ToNativeRotation(frame.rotation))
-                        .set_timestamp_us(timestamp_us)
-                        .build();
+  auto frame = webrtc::VideoFrame::Builder()
+                   .set_video_frame_buffer(nativeBuffer)
+                   .set_rotation(ToNativeRotation(aFrame.rotation))
+                   .set_timestamp_us(timestamp_us)
+                   .build();
 
   MutexLock lock(&api_lock_);
-  DeliverCapturedFrame(videoFrame);
-  mCaptureRecorder.Record(timestamp_us);
+  DeliverCapturedFrame(frame);
+  mCaptureRecorder.Record(0);
 }
 
 void VideoCaptureAvFoundation::SetTrackingId(uint32_t aTrackingIdProcId) {
